@@ -569,6 +569,37 @@ if assimulo_installed:
 class Test_FMUModelME2:
     
     @testattr(stddist = True)
+    def test_estimate_directional_derivatives_linearstate(self):
+        full_path = os.path.join(file_path, "files", "FMUs", "XML", "ME2.0", "LinearStateSpace.fmu")
+        model = Dummy_FMUModelME2([], full_path, _connect_dll=False)
+        
+        def f(*args, **kwargs):
+            derx1 = -1.*model.values[model.variables["x[1]"].value_reference] + model.values[model.variables["u[1]"].value_reference]
+            derx2 = -1.*model.values[model.variables["x[2]"].value_reference] + model.values[model.variables["u[1]"].value_reference]
+            
+            model.values[model.variables["y[1]"].value_reference] = model.values[model.variables["x[1]"].value_reference] + model.values[model.variables["x[2]"].value_reference]
+
+            return np.array([derx1, derx2])
+        model.get_derivatives = f
+        
+        model.initialize()
+        model.event_update()
+        model.enter_continuous_time_mode()
+        
+        [As, Bs, Cs, Ds] = model.get_state_space_representation(use_structure_info=False)
+        [A, B, C, D] = model.get_state_space_representation()
+        
+        assert As.shape == A.shape, str(As.shape)+' '+str(A.shape)
+        assert Bs.shape == B.shape, str(Bs.shape)+' '+str(B.shape)
+        assert Cs.shape == C.shape, str(Cs.shape)+' '+str(C.shape)
+        assert Ds.shape == D.shape, str(Ds.shape)+' '+str(D.shape)
+        
+        assert np.allclose(As, A.toarray()), str(As)+' '+str(A.toarray())
+        assert np.allclose(Bs, B.toarray()), str(Bs)+' '+str(B.toarray())
+        assert np.allclose(Cs, C.toarray()), str(Cs)+' '+str(C.toarray())
+        assert np.allclose(Ds, D.toarray()), str(Ds)+' '+str(D.toarray())
+        
+    @testattr(stddist = True)
     def test_estimate_directional_derivatives_without_structure_info(self):
         full_path = os.path.join(file_path, "files", "FMUs", "XML", "ME2.0", "Bouncing_Ball.fmu")
         model = Dummy_FMUModelME2([], full_path, _connect_dll=False)
