@@ -1,5 +1,11 @@
 --- CHANGELOG ---
 
+--- PyFMI-2.5.X ---
+    * Fixed issue with the estimation of directional derivatives when
+      the number of outputs was less than the number of states
+    * Performance improvements
+    * Fixed minor issue when storing the result (https://github.com/modelon-community/PyFMI/issues/21)
+
 --- PyFMI-2.5.7 ---
     * Fixed minor issue in plot GUI for compliance with Python 3.
 
